Add styles and formatting from wiki page

--- a/index.html
+++ b/index.html
@@ -1,25 +1,224 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link href="css/styles.css" rel="stylesheet" type="text/css" media="all">
     <title>Wikipedia, the free encyclopedia</title>
   </head>
   <body>
-    <div class="sidebar">
+    <div class="container">
       <div class="row">
-        <div class="col-md-3">
-          <img id="main" src="img/Wiki_main.png" alt="logo">
-          <p>
-          <ul>
-            <li>test fire</li>
-            <li>test fire</li>
-            <li>test fire</li>
-            <li>test fire</li>
-          </ul>
-          </p>
-        </div>
-      </div>
-    </div>
+        <div class="col-md-2">
+          <div id="sidebar">
+            <img src="img/Wiki_main.png" alt="Wikipedia logo" width="155px">
+            <ul>
+              <li><a href="#">Main Page</a></li>
+              <li><a href="#">Contents</a></li>
+              <li><a href="#">Featured Content</a></li>
+              <li><a href="#">Current Events</a></li>
+              <li><a href="#">Random Article</a></li>
+              <li><a href="#">Donate to Wikipedia</a></li>
+              <li><a href="#">Wikipedia Store</a></li>
+             <hr>
+            </ul>
+            <p>Interaction</p>
+            <ul>
+              <li><a href="#">Help</a></li>
+              <li><a href="#">About Wikipedia</a></li>
+              <li><a href="#">Community portal</a></li>
+              <li><a href="#">Recent changes</a></li>
+              <li><a href="#">Contact page</a></li>
+             <hr>
+            </ul>
+            <p>Tools</p>
+            <ul>
+              <li><a href="#">What links here</a></li>
+              <li><a href="#">Related changes</a></li>
+              <li><a href="#">Upload file</a></li>
+              <li><a href="#">Special pages</a></li>
+              <li><a href="#">Permanent link</a></li>
+              <li><a href="#">Page information</a></li>
+              <li><a href="#">Wikidata item</a></li>
+             <hr>
+            </ul>
+            <p>Print/export</p>
+            <ul>
+              <li><a href="#">Create a book</a></li>
+              <li><a href="#">Download as PDF</a></li>
+              <li><a href="#">Printable version</a></li>
+             <hr>
+            </ul>
+            <p>In other projects</p>
+            <ul>
+              <li><a href="#">Wikimedia Commons</a></li>
+              <li><a href="#">MediaWiki</a></li>
+              <li><a href="#">Meta-wiki</a></li>
+              <li><a href="#">Wikispecies</a></li>
+              <li><a href="#">Wikibooks</a></li>
+              <li><a href="#">Wikidata</a></li>
+              <li><a href="#">Wikinews</a></li>
+              <li><a href="#">Wikiquote</a></li>
+              <li><a href="#">Wikisource</a></li>
+              <li><a href="#">Wikiversity</a></li>
+              <li><a href="#">Wikivoyage</a></li>
+             <hr>
+            </ul>
+            <p>Languages</p>
+            <ul>
+              <li><a href="#">Simple English</a></li>
+              <li><a href="#">Bahasa Indonesia</a></li>
+              <li><a href="#">Bahasa Melayu</a></li>
+              <li><a href="#">Bsanski</a></li>
+              <li><a href="#">Catala</a></li>
+              <li><a href="#">Cestina</a></li>
+              <li><a href="#">Dansk</a></li>
+              <li><a href="#">Deutsch</a></li>
+              <li><a href="#">Eesti</a></li>
+              <li><a href="#">Espanol</a></li>
+              <li><a href="#">Esperanto</a></li>
+             <hr>
+            </ul>
+
+
+
+
+          </div><!--sidebar id close -->
+        </div> <!--column close -->
+
+
+        <div class="col-md-10">
+          <div id="main">
+
+
+
+
+
+          <div class="container">
+            <div class="row">
+              <div class="col-md-12" id="welcome">
+                <div class="well">
+                  <ul class="welcomelinks pull-right">
+                    <li><a href="#">Society</a></li>
+                    <li><a href="#">Technology</a></li>
+                    <li><a href="#">All portals</a></li>
+                  </ul>
+                  <ul class="welcomelinks pull-right">
+                    <li><a href="#">History</a></li>
+                    <li><a href="#">Mathematics</a></li>
+                    <li><a href="#">Science</a></li>
+                  </ul>
+                  <ul class="welcomelinks pull-right">
+                    <li><a href="#">Arts</a></li>
+                    <li><a href="#">Biography</a></li>
+                    <li><a href="#">Geography</a></li>
+                  </ul>
+                  <h2>Welcome to <a href="#">Wikipedia</a></h2>
+                  <p>the <a href="#">free encyclopedia</a> that anyone can edit.</p>
+                  <p>5,261,711 articles in English</p>
+
+                </div><!--well -->
+              </div><!--welcome id close -->
+            </div><!--row close -->
+
+            <div class="row">
+              <div class="col-md-6" id="green">
+                <div class="panel greenpanelbody">
+                  <div class="panel-heading greenpanelhead">
+                    <h2 class="panel-title">From today's featured article</h2>
+                  </div>
+                  <div class="panel-body">
+                    <img src="images/green.jpg" alt="meteoroid" class="pull-left">
+                    <p>The Earth-grazing meteoroid of 13 October 1990 entered the atmosphere above Czechoslovakia and Poland and, after 9.8 seconds, returned to space. Named EN131090, the 44-kilogram (97 lb) meteoroid was observed travelling 409 kilometres (254 mi) at a speed of 42 km/s (26 mi/s) by cameras of the European Fireball Network. Its apparent magnitude peaked at −6.3, several times brighter than Venus's peak magnitude. Observations of such events are quite rare; this was the second recorded by scientific astronomical instruments (after the 1972 Great Daylight Fireball) and the first recorded from two distant positions, which enabled the calculation of several of its orbital characteristics. The encounter with Earth significantly changed its orbit and, to a smaller extent, some of its physical properties, including its mass and the structure of its upper layer. If the meteoroid had reached the lower atmosphere, it would have overheated and exploded high above the ground, leaving at most a few small meteorites that posed no danger to the Earth's surface. (Full article...)
+
+</p>
+                  </div><!--panel-body-->
+                  <div class="panel-heading greenpanelhead">
+                    <h2 class="panel-title">Did you know...</h2>
+                  </div>
+                  <div class="panel-body">
+                    <img src="images/green1.jpg" alt="Edmund Kalau" class="pull-right">
+                    <ul>
+                      <li>... that after Edmund Kalau (pictured) spent his childhood in the Hitler Youth, he converted to Christianity and served in Palau and Yap in the Liebenzell Mission?</li>
+                      <li>.. that the philosophy <br>journal Between the Species took its name from a fictional periodical mentioned in a George Abbe novel?</li>
+                      <li>... that the science fiction video game Tharsis, inspired by the sinking of the whaling ship Essex, allows the crew of the player's spacecraft to use cannibalism to survive?</li>
+                      <li>... that both the 5-8 Club and Matt's Bar, two Minneapolis eateries on the same street, claim to have invented the Juicy Lucy cheeseburger?</li>
+                      <li>... that the band The Mutants developed from the idea of an album set out to retrace the roots of punk, new wave, and ska, featuring an all-star cast of punk musicians?</li>
+                    </ul>
+                  </div><!--panel-body-->
+                </div><!--panel close -->
+              </div><!--column close -->
+
+              <div class="col-md-6" id="blue">
+                <div class="panel bluepanelbody">
+                  <div class="panel-heading bluepanelhead">
+                    <h2 class="panel-title">In the news</h2>
+                  </div>
+                  <div class="panel-body">
+                    <img src="images/blue.jpg" alt="King Bhumibol Adulyadej" class="pull-right">
+                    <ul>
+                      <li>King of Thailand Bhumibol Adulyadej (pictured), the world's longest-serving head of state, dies at the age of 88.</li>
+                      <li>Bob Dylan is awarded the Nobel Prize in Literature for "having created new poetic expressions within the great American song tradition".</li>
+                      <li>Colombian President Juan Manuel Santos is awarded the Nobel Peace Prize for his efforts to end the Colombian conflict.</li>
+                      <li>Hurricane Matthew kills more than 1,000 people, mainly in Haiti.
+</li>
+                      <li>Bernard L. Feringa, Jean-Pierre Sauvage, and Sir J. Fraser Stoddart are awarded the Nobel Prize in Chemistry for the synthesis of molecular machines.</li>
+                  </div><!--panel-body-->
+                  <div class="panel-heading bluepanelhead">
+                    <h2 class="panel-title">On this day...</h2>
+                  </div>
+                  <div class="panel-body">
+                    <img src="images/blue1.jpg" alt="Paddington Bear" class="pull-right">
+                    <ul>
+                      <li>1710 - Queen Anne's War: The French surrender ending the Siege of Port Royal gave the British permanent possession of Nova Scotia.</li>
+                      <li>1812 - War of 1812: British troops and Mohawk warriors repelled an American invasion from across the Niagara River at the Battle of Queenston Heights near Queenston, Ontario.</li>
+                      <li>1911 - Prince Arthur, a son of Queen Victoria, became the first Governor General of Canada of royal descent, as well as the first Prince of Great Britain and Ireland to hold that position.</li>
+                      <li>1921 - The Soviet republics of Russia, Armenia, Azerbaijan, and Georgia signed the Treaty of Kars with the Grand National Assembly of Turkey to establish the contemporary borders between Turkey and the South Caucasus states.
+</li>
+                      <li>1958 - The first book featuring the English children's literature character Paddington Bear (statue pictured), created by Michael Bond and primarily illustrated by Peggy Fortnum, was published.</li>
+                    </ul>
+                    <p>More anniversaries: October 12 October 13 October 14</p>
+<p>Archive By email List of historical anniversaries</p>
+<p>Current date: October 13, 2016 (UTC) Reload this page</p>
+
+                  </div><!--panel-body-->
+                </div><!--panel close -->
+              </div><!--column close -->
+
+              </div><!--row-->
+
+            <div class="row">
+              <div class="col-md-12" id="purple">
+                <div class="panel purplepanelbody">
+                  <div class="panel-heading purplepanelhead">
+                    <h2 class="panel-title">From today's featured article</h2>
+                  </div>
+                  <div class="panel-body">
+                    <img src="images/purple.jpg" alt="Painting: Pieter" >
+                    <p>The Peasant Wedding is a 1567 genre painting by the Flemish Renaissance painter and printmaker Pieter Bruegel the Elder, one of many depicting peasant life. It is housed in the Kunsthistorisches Museum, Vienna.</p>
+
+                  </div><!--panel-body-->
+                </div><!--panel close -->
+              </div><!--column close -->
+            </div><!--row close -->
+
+            <div class="row">
+              <div class="col-md-12" id="bottom">
+                <h3>Other areas of Wikipedia</h3><hr>
+                <ul>
+                  <li><a href="#">Community portal</a> -Bulletin board, projects, resources and activities covering a wide range of Wikipedia areas.</li>
+                  <li><a href="#">Help desk</a> - Ask questions about using Wikipedia.</li>
+                  <li><a href="#">Local embassy </a>- For Wikipedia-related communication in languages other than English.</li>
+                  <li><a href="#">Reference desk</a> - Serving as virtual librarians, Wikipedia volunteers tackle your questions on a wide range of subjects.</li>
+                  <li><a href="#">Site news </a> - Announcements, updates, articles and press releases on Wikipedia and the Wikimedia Foundation.</li>
+                  <li><a href="#">Village pump</a> - For discussions about Wikipedia itself, including areas for technical issues and policies.</li>
+                </ul>
+                <p></p>
+              </div><!--bottom id close -->
+            </div><!--row close -->
+        </div><!--column close -->
+      </div> <!--row closer-->
+      </div><!--main id close -->
+    </div> <!--container closer-->
+
   </body>
 </html>
